<resources>
    <string name="app_name">Notes</string>
    <string name="add_note_button">Add note button</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note">Delete note</string>
    <string name="about_information">Some important information about this application, that nobody never read</string>
    <string name="close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="timestamp_format">dd.MM.yyyy HH:mm</string>
    <string name="note_title">Note title</string>
    <string name="date">Date</string>
    <string name="note_text">Note text</string>
    <string name="save_note">Save note</string>
    <string name="cancel">Cancel</string>
    <string name="tags_hint">Tags separated with comma</string>
    <string name="no_note_found">No such note found</string>
    <string name="no_title">Note should have a title</string>
    <string name="no_date">Specify a date of note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_query">Are you sure you want to delete note\n\n%1$s\n\npermanently?</string>
    <string name="update_query">Are you sure you want to update note\n\n%1$s\n\nwith new data?</string>
</resources>