<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/aboutMenuItem"
        android:orderInCategory="1000"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/addNoteMenuItem"
        android:icon="@drawable/ic_note_add"
        app:iconTint="?attr/menuItemIconTint"
        android:orderInCategory="20"
        android:title="@string/add_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchMenuItem"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>